<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_team_id"
        android:enabled="true"
        android:title="@string/ic_team"
        android:icon="@drawable/ic_team"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_match_id"
        android:enabled="true"
        android:title="@string/ic_match"
        android:icon="@drawable/ic_next_match"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_favorite_id"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/ic_favorites"
        app:showAsAction="ifRoom" />
</menu>