<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Spinner
        android:id="@+id/event_spinner_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/base_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_match"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2dp" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>
    </LinearLayout>
    <include layout="@layout/progress_bar" />
</FrameLayout>
